fixed bug where long words didn't break in a tweet

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -34,6 +34,7 @@ article.tweet .handle {
 
 article.tweet p {
   padding: 1em;
+  word-break: break-word;
 }
 
 article.tweet footer {
